changed archives and images to be contained in the general /public/assets/ directory to ease deployment scripts; added :user interpolation to paperclip paths

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ db/schema.rb
 log/*.log
 tmp/**/*
 config/database.yml
-public/archives/
-public/galleries/
+public/assets/
 Capfile
 config/deploy.rb
