assets folder, but not its subdirectories are added to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ db/schema.rb
 log/*.log
 tmp/**/*
 config/database.yml
-public/assets/*
+public/assets/archives
+public/assets/galleries
 Capfile
 config/deploy.rb
