--- a/test/fixtures/galleries.yml
+++ b/test/fixtures/galleries.yml
@@ -1,13 +1,15 @@
 one:
-  title: MyString
-  user_id: 1
+  name: Gallery 1
+  owner_id: 1
+  public: true
   shoot_date: 2010-12-16
   description: MyText
-  category: MyString
+  category: 1
 
 two:
-  title: MyString
-  user_id: 1
+  name: Gallery 2
+  owner_id: 1
+  public: true
   shoot_date: 2010-12-16
   description: MyText
-  category: MyString
+  category: 1
