Fix all the tests

--- a/test/fixtures/galleries.yml
+++ b/test/fixtures/galleries.yml
@@ -1,6 +1,6 @@
 senior_gallery:
   name: Gallery 1
-  owner_id: molly
+  owner: molly
   public: true
   shoot_date: 2010-12-16
   description: MyText
@@ -8,7 +8,7 @@ senior_gallery:
 
 wedding_gallery:
   name: Gallery 2
-  owner_id: owen
+  owner: owen
   public: true
   shoot_date: 2010-12-16
   description: MyText
