Fix test and reason for test breaking

--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -2,11 +2,11 @@ molly_seniors_1:
   order: molly_seniors
   photo: senior_photo_one
   quantity: 1
-  print: senior
+  print: wallets
 
 andrew_seniors_1:
   order: andrew_seniors
-  photo: wedding_photo_one
+  photo: senior_photo_one
   quantity: 1
-  print: wedding
+  print: eight_by_ten
 
